--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -35,8 +35,8 @@ RUN /bin/bash -c 'set -ex && \
 RUN pip3 install --no-cache-dir pyinstaller==5.9.0 \
     && pip3 install --no-cache-dir patchelf==0.17.0.0 \
     && pip3 install --no-cache-dir staticx \
-    && pip3 install --no-cache-dir -r ./workspace/app/requirements.txt \
-    && pip3 install --no-cache-dir -r ./workspace/app/requirements-links.txt
+    && pip3 install --no-cache-dir -r /workspace/app/requirements.txt \
+    && pip3 install --no-cache-dir -r /workspace/app/requirements-links.txt
 
 WORKDIR /workspace
 
