--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -51,7 +51,7 @@ WORKDIR /workspace/app/dist
 RUN staticx main run-exe
 
 # Runner stage, to copy the executable
-FROM scratch
+FROM scratch as runner
 
 COPY --from=builder ./workspace/app/dist/run-exe /dist/
 
