--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -58,12 +58,12 @@ COPY --from=builder ./workspace/app/dist/run-exe /app
 
 WORKDIR /tmp
 
-WORKDIR /dist
-
-ENV PATH="/dist:$PATH"
 
 
+ENV PATH="/:$PATH"
 
 LABEL org.opencontainers.image.source="https://github.com/eclipse-velocitas/vehicle-app-python-template"
 
-CMD ["./run-exe"]
+
+
+CMD ["/app"]
